Send game updates over WebSockets
